# pypeliner

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
docs/: api.rst  best_practices.rst  conf.py  future_work.rst  getting_started.rst  index.rst  installation.rst  what_is_pipeliner.rst  what_is_pypeliner.rst  what_is_pypelines.rst
docs/_autosummary/: pipeliner.examples.process_image.processors.BlurImageProcessor.rst  pipeliner.examples.process_image.processors.DilateImageProcessor.rst  pipeliner.examples.process_image.processors.ErodeImageProcessor.rst  pipeliner.examples.process_image.processors.ScaleImageProcessor.rst  pipeliner.examples.process_image.processors.SobelEdgeExtractorProcessors.rst  pipeliner.examples.process_image.processors.rst  pipeliner.examples.process_image.readers.ImageReader.rst  pipeliner.examples.process_image.readers.rst  pipeliner.examples.process_image.rst  pipeliner.examples.process_text_file.processors.RemoveNumbersProcessor.rst  pipeliner.examples.process_text_file.processors.RemoveStopWordsProcessor.rst  pipeliner.examples.process_text_file.processors.TitleWordsProcessor.rst  pipeliner.examples.rst  (+97 more)
examples/: __init__.py
pipeliner/: __init__.py
processors/: base.py
pypeliner/: __init__.py  exceptions.py  runner_configuration.py
pypelines/: __init__.py
readers/: base.py  bulk_readers.py  stream_readers.py
requirements/: docs.txt
runners/: base.py  bulk_runners.py  stream_runners.py
tests/: test_hooks.py  test_processors.py  test_readers.py  test_runner.py
utils/: decorators.py
(+46 files in other folders)
